crates/ferrum-interfaces/tests/ui/vnext/fail/execution_plan_is_not_deserialize.rs
use ferrum_interfaces::vnext::ExecutionPlan;

fn main() {
    let _: ExecutionPlan = serde_json::from_str("{}").unwrap();
}
